[tool.poetry]
name = "youtubeTelegram"
version = "0.1.0"
description = ""
authors = ["Nordick-24 <bura23610@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytube = "^12.1.2"
loguru = "^0.6.0"
aiogram = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
